--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=demo
-spring.config.import=optional:file:.env
 # Database configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
@@ -8,7 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT secret key
 security.jwt.secret-key =${JWT_SECRET_KEY}
@@ -22,4 +20,4 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
+spring.config.import=optional:file:.env[.properties]
